rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__join_where_and_or.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"\n                SELECT\n                    att.attname,\n                    att.attnum,\n                    cl.oid\n                FROM pg_attribute att\n                JOIN pg_class cl ON\n                    cl.oid = attrelid AND (\n                        cl.relkind = 's' OR\n                        cl.relkind = 'r'\n                    )\n                ORDER BY\n                    cl.oid ASC,\n                    att.attnum ASC\n                ;\n                \".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+--------------------+--------+-------+
| attname            | attnum | oid   |
+--------------------+--------+-------+
| count              | 1      | 18000 |
| maxPrice           | 2      | 18000 |
| minPrice           | 3      | 18000 |
| avgPrice           | 4      | 18000 |
| countDistinct      | 5      | 18000 |
| order_date         | 6      | 18000 |
| customer_gender    | 7      | 18000 |
| taxful_total_price | 8      | 18000 |
| has_subscription   | 9      | 18000 |
| is_male            | 10     | 18000 |
| is_female          | 11     | 18000 |
| __user             | 12     | 18000 |
| __cubeJoinField    | 13     | 18000 |
| agentCount         | 1      | 18016 |
| agentCountApprox   | 2      | 18016 |
| __user             | 3      | 18016 |
| __cubeJoinField    | 4      | 18016 |
| someNumber         | 1      | 18023 |
| __user             | 2      | 18023 |
| __cubeJoinField    | 3      | 18023 |
+--------------------+--------+-------+
