rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__localtimestamp.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT localtimestamp = current_timestamp\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+----------------------------------------+
| localtimestamp() = current_timestamp() |
+----------------------------------------+
| true                                   |
+----------------------------------------+
