rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__metabase_table_exists.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(r#\"SELECT TRUE AS \"_\" FROM \"public\".\"KibanaSampleDataEcommerce\" WHERE 1 <> 1 LIMIT 0;\"#.to_string(),\nDatabaseProtocol::PostgreSQL,).await?"
---
+---+
| _ |
+---+
+---+
