rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__metabase_to_char_query.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"select to_char(current_timestamp, 'YYYY-MM-DD HH24:MI:SS.MS TZ')\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-------------------------------------------------------------+
| to_char(utctimestamp(),Utf8("YYYY-MM-DD HH24:MI:SS.MS TZ")) |
+-------------------------------------------------------------+
| 2022-05-26 11:18:59.122                                     |
+-------------------------------------------------------------+
