rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__noninjective_coalesce_from_dimension.snap
---
source: cubesql/src/compile/mod.rs
expression: context.execute_query(query).await.unwrap()
---
+--------+
| result |
+--------+
| (none) |
| ab__cd |
| abcd   |
| foo    |
+--------+
