rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__nonrewritable_date_trunc.snap
---
source: cubesql/src/compile/mod.rs
expression: context.execute_query(query).await.unwrap()
---
+-------------------------+-----------------+
| quarter0                | min_month_count |
+-------------------------+-----------------+
| 2024-01-01T00:00:00.000 | 1               |
| 2024-04-01T00:00:00.000 | 10              |
+-------------------------+-----------------+
